Bug 142957 - can't copy encrypted dvd ((K3bLibDvdCss) unable to seek to 7552)
Summary: can't copy encrypted dvd ((K3bLibDvdCss) unable to seek to 7552)
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
: 181791 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-03-14 12:42 UTC by sts
Modified: 2014-09-28 00:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
output (11.72 KB, text/plain)
2007-03-14 12:43 UTC, sts
Details
Seek without flags if with flags fails. (606 bytes, patch)
2007-03-16 17:46 UTC, Sebastian Trueg
Details
Ignore failed key cracking (2.54 KB, patch)
2007-03-16 18:01 UTC, Sebastian Trueg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sts 2007-03-14 12:42:50 UTC
Version:           1.0rc7 (using KDE 3.5.6 "release 41.2" , openSUSE )
Compiler:          Target: x86_64-suse-linux
OS:                Linux (x86_64) release 2.6.18.8-164-default

I can't copy this DVD 'CREATURE_COMFORTS_D1'.. see attachment for output.
Comment 1 sts 2007-03-14 12:43:41 UTC
Created attachment 19972 [details]
output
Comment 2 Sebastian Trueg 2007-03-15 13:30:07 UTC
I would not say that this is a K3b bug. The decryption in dvdcss fails. Nothing K3b can do about that.
Comment 3 sts 2007-03-15 13:48:06 UTC
I was wondering it starts with k9copy and I can play it with kaffeine..
Comment 4 Sebastian Trueg 2007-03-15 13:55:52 UTC
> ------- Additional Comments From sts gmx de  2007-03-15 13:48 -------
> I was wondering it starts with k9copy and I can play it with kaffeine..


hmm... and it happens each time with k3b?
Comment 5 sts 2007-03-16 10:27:16 UTC
yes it happens each time. I test another encrypted dvd and it works fine.. hmh..

I found a csstest file:
./csstest /dev/hda 7552
cool, I found libdvdcss version 1.2.9
requested sector: 000001ba...00000000000000000000000000000000000000000000...
sector is not scrambled

I don't know this means..
Comment 6 sts 2007-03-16 16:34:39 UTC
and ripping this dvd works also fine
Comment 7 Sebastian Trueg 2007-03-16 16:46:49 UTC
> ------- Additional Comments From sts gmx de  2007-03-16 16:34 -------
> and ripping this dvd works also fine


using which app?
Comment 8 sts 2007-03-16 16:55:06 UTC
your great application 1.0rc7 :)
Comment 9 Sebastian Trueg 2007-03-16 17:46:49 UTC
Created attachment 19999 [details]
Seek without flags if with flags fails.

Try this one and send the output again, please.
Comment 10 Sebastian Trueg 2007-03-16 18:01:31 UTC
Created attachment 20000 [details]
Ignore failed key cracking

Maybe this patch makes more sense
Comment 11 Bernard Lang 2009-01-24 19:48:42 UTC
*** Bug 181791 has been marked as a duplicate of this bug. ***
Comment 12 Dawit Alemayehu 2014-06-29 16:06:15 UTC
Git commit 89d4585c087daf9bdc17c4019af8065d23eb2d85 by Dawit Alemayehu.
Committed on 28/06/2014 at 01:57.
Pushed by adawit into branch 'KDE/4.13'.

When executing commands set the working directory to be the current directory
if not speified by the service.
REVIEW: 118954
FIXED-IN: 4.13.3

M  +8    -1    kinit/klauncher.cpp
M  +5    -2    kio/kio/krun.cpp

http://commits.kde.org/kdelibs/89d4585c087daf9bdc17c4019af8065d23eb2d85
Comment 13 Dawit Alemayehu 2014-07-01 11:44:23 UTC
Git commit 0a5683cac4bc38e12eaa62966e37d8d208837662 by Dawit Alemayehu.
Committed on 01/07/2014 at 11:35.
Pushed by adawit into branch 'KDE/4.13'.

Amended fix for #142957 to only apply to a local URL.
REVIEW: 118954

M  +3    -1    kinit/klauncher.cpp
M  +4    -1    kio/kio/krun.cpp

http://commits.kde.org/kdelibs/0a5683cac4bc38e12eaa62966e37d8d208837662
Comment 14 Dawit Alemayehu 2014-07-01 11:51:28 UTC
Please disregard the commit messages as those were intended for bug# 142597 and not this one.