When executing commands set the working directory to be the current directory if not speified by the service.

BUG: 142957
REVIEW: 118954
FIXED-IN: 4.13.3